# duck_transcriber

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  samconfig.toml  template-DEFAULT.yaml  template.yaml.example  update.sh
.github/workflows/: ci.yml  deploy-lambda.yml  rust.yml
.sqlx/: query-64aa75c4a9d70a98f27826784a60d1867bf44794b112d11af2774ea68f39ff3b.json  query-860d799b5f2dde51310bcca1ca643025c21663299ef17e509b9d79aa21aee4f7.json  query-9c67ed7e4d6fededd072a9fec4cbf647a834c0038f48bbd82e424aec8d01540a.json  query-b5424989b3fd075f6a2b7d5365484c5d203f9c4d197c4294adf4fad2fa9114de.json
rust_app/: Cargo.toml
rust_app/src/: main.rs
rust_app/src/commands/: english.rs  help.rs  stats.rs  tts.rs
rust_app/src/listeners/: mod.rs  text.rs  video.rs  voice.rs
rust_app/src/utils/: dynamodb.rs  mod.rs  openai.rs  other.rs  telegram.rs
scripts/: start-whisper-tmux.sh
src/: bedrock.rs  database.rs  dev_commands.rs  dynamodb.rs  ip_validator.rs  kms.rs  main.rs  openai.rs  sql.rs  structs.rs  summarize.rs  telegram.rs  transcribe.rs  types.rs  utils.rs
src/commands/: english.rs  help.rs  mod.rs  stats.rs  tts.rs
src/listeners/: text.rs  video.rs  voice.rs
src/utils/: dynamodb.rs  dynamodb_test.rs  mod.rs  openai.rs  other.rs  telegram.rs  transcode.rs  whisper.rs
