[package]
name = "duck_transcriber"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "1.0"
lambda_runtime = "1.0"
chrono = "0.4"
reqwest = { version = "0.13", features = [
    "multipart",
    "json",
    "rustls"
], default-features = false }
serde = "1"
serde_json = "1"
tokio = { version = "1.49", features = ["full"] }
teloxide = { version = "0.17", features = ["macros", "rustls", "cache-me"], default-features = false }
mime = "0.3"
mime_guess = "2.0"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.101"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
fern = "0.7"

[package.metadata.lambda.deploy]
memory = 256      # Function's memory (increased for larger direct uploads)
timeout = 60      # Function's execution timeout
env_file = ".env" # File to load environment variables from
