[package]
name = "duck_transcriber"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.13", features = [
    "multipart",
    "json",
    "rustls"
], default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.49", features = ["full"] }
teloxide = { version = "0.17", features = ["macros", "rustls", "cache-me", "ctrlc_handler"], default-features = false }
mime = "0.3"
mime_guess = "2.0"
strum = { version = "0.28", features = ["derive"] }
log = "0.4"
fern = "0.7"
sqlx = { version = "0.9", features = ["tls-rustls", "sqlite", "macros"] }
dotenvy = "0.15.7"
