[package]
name = "duck-transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0"
teloxide = "0.12.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
mime = "0.3"
rand = "0.8"
aws-config = "1.2"
aws-sdk-dynamodb = "1.23"
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "native-tls-vendored",
], default-features = false }